--- a/style.css
+++ b/style.css
@@ -1,24 +1,25 @@
-.container{
-    position: absolute;
+.container {
+
     background-color: lightsteelblue;
     
     text-align: center;
-    width:960px;
+  
 }
 
 .password_container {
     
     background-color: white;
     text-align: left;
-    padding: 20px;
-    align-self: center;
+    
+    
 }
 
 #password-screen {
 
-    width: 500px;
+    width: 100%;
     height: 100px;
     text-align: center;
+    border-style: dotted;
 
 }
 
